# Unicode-Text-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Unicode-Text-library.sublime-workspace
Examples/: CMakeLists.txt  example_01.c
Tests/: CMakeLists.txt  Test.c
UniText/: CMakeLists.txt
UniText/Headers/: CMakeLists.txt
UniText/Headers/UniText/: CMakeLists.txt  UTF8.h  UniText.h
UniText/Headers/common/: CMakeLists.txt  defines.h  export.h  standard_includes.h
UniText/Headers/ucs2/: CMakeLists.txt
UniText/Headers/ucs4/: CMakeLists.txt
UniText/Headers/utf16/: CMakeLists.txt
UniText/Headers/utf32/: CMakeLists.txt
UniText/Headers/utf8/: CMakeLists.txt  defines.h  utf8.h  utility.h
UniText/Sources/: CMakeLists.txt
UniText/Sources/UniText/: CMakeLists.txt  UTF8.c  UniText.c
UniText/Sources/ucs2/: CMakeLists.txt
UniText/Sources/ucs4/: CMakeLists.txt
UniText/Sources/utf16/: CMakeLists.txt
UniText/Sources/utf32/: CMakeLists.txt
UniText/Sources/utf8/: CMakeLists.txt  utf8.c  utility.c
UniText/include/UniText/: CMakeLists.txt  UTF8.h  UniText.h
UniText/src/: CMakeLists.txt
UniText/src/UniText/: CMakeLists.txt  Utility.c  Utility.h
